[package]
edition      = "2024"
name         = "esp-handheld-uart"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "esp-handheld-uart"
path = "./src/bin/main.rs"

[dependencies]
jiecang-handset-controller = { path = "../.." }

esp-hal = { version = "~1.1.0", features = ["defmt", "esp32c6", "unstable"] }

esp-rtos = { version = "0.3.0", features = ["defmt", "embassy", "esp32c6"] }

defmt                  = "1.0.1"
esp-bootloader-esp-idf = { version = "0.5.0", features = ["defmt", "esp32c6"] }

embassy-executor = { version = "0.10.0", features = ["defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt"] }
esp-backtrace = { version = "0.19.0", features = [
  "defmt",
  "esp32c6",
  "panic-handler",
] }
esp-println = { version = "0.17.0", features = ["defmt-espflash", "esp32c6"] }

critical-section = "1.2.0"
static_cell      = "2.1.1"
